--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,11 @@
+Options +FollowSymLinks
+IndexIgnore */*
 RewriteEngine on
-RewriteRule ^login$ /testproject/form.php [L]
+
+RewriteCond %{REQUEST_URI} ^/$
+RewriteRule ^(.*)$ /api/$1 [R=301]
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/?(.*)$ /testproject/index.php
